# Project2

./: README.md
client/: client.cpp  client.py  clientV2.py
server/: .clang-format  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project2_Server.sln  Project2_Server.vcxproj  Project2_Server.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
server/Project2_Server.dir/Debug/: Project2_Server.exe.recipe
server/Project2_Server.dir/Debug/Project2_Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/headers/: group.h  server.h  user.h
server/src/: group.cpp  main.cpp  server.cpp  user.cpp
server/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
server/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
server/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
server/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
